--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,3 +7,6 @@ python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-dotenv==1.0.0
 alembic==1.12.0
+pytest==7.4.3
+pytest-asyncio==0.21.1
+httpx==0.24.1
