--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,10 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "test": "jest",
+        "test:watch": "jest --watch",
+        "test:coverage": "jest --coverage"
     },
     "dependencies": {
         "@radix-ui/react-dialog": "^1.0.5",
@@ -30,12 +33,18 @@
         "zustand": "^4.4.7"
     },
     "devDependencies": {
+        "@testing-library/jest-dom": "^6.1.4",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^14.5.1",
+        "@types/jest": "^29.5.5",
         "@types/node": "^20.10.0",
         "@types/react": "^18.2.39",
         "@types/react-dom": "^18.2.17",
         "autoprefixer": "^10.4.16",
         "eslint": "^8.54.0",
         "eslint-config-next": "14.0.4",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
         "postcss": "^8.4.32",
         "tailwindcss": "^3.3.6",
         "typescript": "^5.3.2"
