--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,11 +5,13 @@
     "scripts": {
         "dev": "next dev",
         "build": "next build",
+        "build:static": "next build && next export",
         "start": "next start",
         "lint": "next lint",
         "test": "jest",
         "test:watch": "jest --watch",
-        "test:coverage": "jest --coverage"
+        "test:coverage": "jest --coverage",
+        "deploy": "npm run build && touch out/.nojekyll"
     },
     "dependencies": {
         "@radix-ui/react-dialog": "^1.0.5",
