fix: 修復 GitHub Pages 部署問題
- 修正 Next.js 配置中的路徑設定
- 修復 Service Worker 註冊路徑
- 更新 PWA manifest 路徑
- 創建 GitHub Actions 自動部署工作流程
- 添加 404.html 處理 SPA 路由
- 更新所有靜態資源路徑以支援 GitHub Pages

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
         "test": "jest",
         "test:watch": "jest --watch",
         "test:coverage": "jest --coverage",
-        "deploy": "npm run build && touch out/.nojekyll"
+        "deploy": "npm run build && touch out/.nojekyll && cp public/404.html out/404.html"
     },
     "dependencies": {
         "@radix-ui/react-dialog": "^1.0.5",
