--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,17 +6,6 @@ on:
   pull_request:
     branches: [main]
 
-# 添加權限配置
-permissions:
-  contents: write
-  pages: write
-  id-token: write
-
-# 允許並發部署
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
-
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -33,12 +22,16 @@ jobs:
           cache-dependency-path: frontend/package-lock.json
 
       - name: Install dependencies
-        working-directory: ./frontend
-        run: npm ci
+        run: |
+          cd frontend
+          npm ci
 
-      - name: Build application
-        working-directory: ./frontend
-        run: npm run build
+      - name: Build
+        run: |
+          cd frontend
+          npm run build
+        env:
+          NODE_ENV: production
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
@@ -46,5 +39,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./frontend/out
-          publish_branch: gh-pages
           force_orphan: true
