--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
         "@radix-ui/react-switch": "^1.2.5",
         "@radix-ui/react-tabs": "^1.0.4",
         "@radix-ui/react-toast": "^1.1.5",
+        "@vercel/speed-insights": "^1.2.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.0.0",
         "date-fns": "^2.30.0",
