feat: 新增根據動畫 ID 獲取動畫詳情的 API 端點
- 在 search.py 中新增 get_anime_by_id 端點，允許根據動畫 ID 獲取詳細資訊
- 在 search_service.py 中實現 get_anime_by_id 方法，使用 AniList API 獲取動畫數據
- 更新 anilist.ts，調整 API 基礎 URL，簡化查詢邏輯
- 改善 layout.tsx 中的 Service Worker 錯誤處理
- 更新 manifest.json，修正圖標路徑和應用程式 URL

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -17,49 +17,49 @@
   "prefer_related_applications": false,
   "icons": [
     {
-      "src": "/WatchedIt/icons/icon-72x72.png",
+      "src": "/icons/icon-72x72.png",
       "sizes": "72x72",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/WatchedIt/icons/icon-96x96.png",
+      "src": "/icons/icon-96x96.png",
       "sizes": "96x96",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/WatchedIt/icons/icon-128x128.png",
+      "src": "/icons/icon-128x128.png",
       "sizes": "128x128",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/WatchedIt/icons/icon-144x144.png",
+      "src": "/icons/icon-144x144.png",
       "sizes": "144x144",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/WatchedIt/icons/icon-152x152.png",
+      "src": "/icons/icon-152x152.png",
       "sizes": "152x152",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/WatchedIt/icons/icon-192x192.png",
+      "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/WatchedIt/icons/icon-384x384.png",
+      "src": "/icons/icon-384x384.png",
       "sizes": "384x384",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/WatchedIt/icons/icon-512x512.png",
+      "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
@@ -70,10 +70,10 @@
       "name": "新增作品",
       "short_name": "新增",
       "description": "快速新增新作品",
-      "url": "/WatchedIt/works/new",
+      "url": "/works/new",
       "icons": [
         {
-          "src": "/WatchedIt/icons/icon-96x96.png",
+          "src": "/icons/icon-96x96.png",
           "sizes": "96x96"
         }
       ]
@@ -82,10 +82,10 @@
       "name": "設定",
       "short_name": "設定",
       "description": "應用程式設定",
-      "url": "/WatchedIt/settings",
+      "url": "/settings",
       "icons": [
         {
-          "src": "/WatchedIt/icons/icon-96x96.png",
+          "src": "/icons/icon-96x96.png",
           "sizes": "96x96"
         }
       ]
@@ -93,13 +93,13 @@
   ],
   "screenshots": [
     {
-      "src": "/WatchedIt/screenshots/desktop.png",
+      "src": "/screenshots/desktop.png",
       "sizes": "1280x720",
       "type": "image/png",
       "form_factor": "wide"
     },
     {
-      "src": "/WatchedIt/screenshots/mobile.png",
+      "src": "/screenshots/mobile.png",
       "sizes": "390x844",
       "type": "image/png",
       "form_factor": "narrow"
