--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,7 @@
         "clsx": "^2.0.0",
         "date-fns": "^2.30.0",
         "lucide-react": "^0.294.0",
-        "next": "14.0.4",
+        "next": "^14.1.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "recharts": "^2.8.0",
@@ -45,7 +45,7 @@
         "@types/react-dom": "^18.2.17",
         "autoprefixer": "^10.4.16",
         "eslint": "^8.54.0",
-        "eslint-config-next": "14.0.4",
+        "eslint-config-next": "^14.1.0",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
         "postcss": "^8.4.32",
