--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,12 @@
         "deploy": "npm run build && touch out/.nojekyll && cp public/404.html out/404.html"
     },
     "dependencies": {
+        "@radix-ui/react-alert-dialog": "^1.1.14",
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-dropdown-menu": "^2.1.15",
         "@radix-ui/react-label": "^2.1.7",
         "@radix-ui/react-select": "^2.0.0",
+        "@radix-ui/react-separator": "^1.1.7",
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-switch": "^1.2.5",
         "@radix-ui/react-tabs": "^1.0.4",
