更新 pyproject.toml 和 README.md，新增專案描述、作者資訊、關鍵字及分類，並添加 GitHub 連結和線上 Demo 連結。更新前端 package.json，新增 repository、homepage 和 bugs 欄位，並擴充關鍵字。前端頁面中新增 GitHub 連結和關於資訊，提供使用者更多專案相關資訊。

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,25 @@
     "name": "watchedit-frontend",
     "version": "1.0.0",
     "private": true,
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/guantou/WatchedIt.git"
+    },
+    "homepage": "https://watchedit-psi.vercel.app",
+    "bugs": {
+        "url": "https://github.com/guantou/WatchedIt/issues"
+    },
+    "keywords": [
+        "media-tracking",
+        "anime",
+        "movie",
+        "tv-series",
+        "novel",
+        "pwa",
+        "nextjs",
+        "typescript",
+        "tailwindcss"
+    ],
     "scripts": {
         "dev": "next dev",
         "build": "next build",
