更新 GitHub 連結至新用戶名，修正相關文檔中的所有引用，包括 pyproject.toml、README.md、部署指南及前端配置文件。新增集數管理功能，支持批量操作，包括標記已看/未看、刪除集數等，並修復手機版點擊事件問題以提升用戶體驗。

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,11 @@
     "private": true,
     "repository": {
         "type": "git",
-        "url": "https://github.com/guantou/WatchedIt.git"
+        "url": "https://github.com/guan4tou2/WatchedIt.git"
     },
     "homepage": "https://watchedit-psi.vercel.app",
     "bugs": {
-        "url": "https://github.com/guantou/WatchedIt/issues"
+        "url": "https://github.com/guan4tou2/WatchedIt/issues"
     },
     "keywords": [
         "media-tracking",
