--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
         "date-fns": "^2.30.0",
         "lucide-react": "^0.294.0",
         "next": "^14.1.0",
+        "next-intl": "^4.5.5",
         "opencc-js": "^1.0.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
