--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
         "test": "jest",
         "test:watch": "jest --watch",
         "test:coverage": "jest --coverage",
+        "test:e2e": "playwright test",
         "deploy": "npm run build && touch out/.nojekyll && cp public/404.html out/404.html"
     },
     "dependencies": {
@@ -59,8 +60,9 @@
         "zustand": "^4.4.7"
     },
     "devDependencies": {
+        "@playwright/test": "^1.49.0",
         "@testing-library/jest-dom": "^6.1.4",
-        "@testing-library/react": "^13.4.0",
+        "@testing-library/react": "^16.3.0",
         "@testing-library/user-event": "^14.5.1",
         "@types/jest": "^29.5.5",
         "@types/node": "^20.10.0",
