fix: configure root package.json with workspaces and build script for Vercel

--- a/package.json
+++ b/package.json
@@ -1,1 +1,10 @@
-{}
+{
+    "name": "watchedit-root",
+    "private": true,
+    "scripts": {
+        "build": "cd frontend && npm install && npm run build"
+    },
+    "workspaces": [
+        "frontend"
+    ]
+}
