--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,7 +57,10 @@
         "recharts": "^2.8.0",
         "tailwind-merge": "^2.0.0",
         "tailwindcss-animate": "^1.0.7",
-        "zustand": "^4.4.7"
+        "zustand": "^4.4.7",
+        "autoprefixer": "^10.4.16",
+        "postcss": "^8.4.32",
+        "tailwindcss": "^3.3.6"
     },
     "devDependencies": {
         "@playwright/test": "^1.49.0",
@@ -68,13 +71,10 @@
         "@types/node": "^20.10.0",
         "@types/react": "^18.2.39",
         "@types/react-dom": "^18.2.17",
-        "autoprefixer": "^10.4.16",
         "eslint": "^8.54.0",
         "eslint-config-next": "^14.1.0",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
-        "postcss": "^8.4.32",
-        "tailwindcss": "^3.3.6",
         "typescript": "^5.3.2"
     }
 }
