fix: restore missing dependencies and optimize root build script for workspaces

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "watchedit-root",
     "private": true,
     "scripts": {
-        "build": "cd frontend && npm install && npm run build"
+        "build": "npm run build -w watchedit-frontend"
     },
     "workspaces": [
         "frontend"
