--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,6 +57,9 @@
         "recharts": "^2.8.0",
         "tailwind-merge": "^2.0.0",
         "tailwindcss-animate": "^1.0.7",
+        "zustand": "^4.4.7",
+        "autoprefixer": "^10.4.16",
+        "postcss": "^8.4.32",
         "tailwindcss": "^3.3.6",
         "@types/node": "^20.10.0",
         "@types/react": "^18.2.39",
